# JQ-dbt-dlt-Lab

./: .gitignore  Makefile  README.md  dlt-dbt-sandbox-spec.md  orchestration.py  pyproject.toml  task.md
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/macros/: cents_to_dollars.sql  get_active_currencies.sql  test_no_future_dates.sql
dbt_project/models/marts/: _marts.yml  dim_currencies.sql  fct_daily_rates.sql
dbt_project/models/staging/: _sources.yml  _staging.yml  stg_ecb_rates.sql
dbt_project/seeds/: _seeds.yml  currency_regions.csv
dbt_project/snapshots/: snp_currencies.sql
dbt_project/tests/: assert_positive_rates.sql
dlt_pipelines/: ecb_rates.py  ecb_rates_incremental.py  users_nested.py
experiments/: 01_merge_disposition.ipynb  02_dbt_type_change.ipynb  03_schema_evolution.ipynb  04_dbt_lineage_docs.ipynb  05_break_a_test.ipynb  06_incremental_model.ipynb  07_dlt_metadata.ipynb  08_dlt_pipeline_show.ipynb  09_dlt_incremental_cursor.ipynb  10_dlt_schema_contract.ipynb  11_dlt_secrets_config.ipynb  12_dlt_nested_json.ipynb  13_dlt_testing.ipynb  14_dlt_filesystem_parquet.ipynb  15_dlt_dbt_integration.ipynb  16_dbt_snapshot_scd2.ipynb  17_dbt_seeds.ipynb  18_dbt_jinja_macros.ipynb  19_dbt_custom_tests.ipynb  20_dbt_source_freshness.ipynb  21_dbt_hooks.ipynb  22_dbt_selectors_defer.ipynb  23_dbt_incremental_strategies.ipynb  24_dbt_multi_target.ipynb  25_dbt_utils_in_practice.ipynb  26_orchestration_ci.ipynb  README.md
